Actually fixed the returning back to homepage animation
I think...its finally fixed, re-did the menu page completely might have messed up something else in the process good to keep note ig

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
     justify-content: center;
     height: 100vh;
     background: #161616;
+    overflow: hidden;
 }
 
 .heading {
