--- a/src/maze/maze-menu.css
+++ b/src/maze/maze-menu.css
@@ -96,7 +96,10 @@
     0% {
       transform: rotate(-90deg);
     }
+    50% {
+      transform: rotate(-30deg);
+    }
     100% {
-      transform: rotate(270deg);
+      transform: rotate(-90deg);
     }
   }
